--- a/README
+++ b/README
@@ -2,6 +2,10 @@ FMAP - flow mapper
 
 === Pre-requisites ===
 1. SAMtools:
+  The following commands rely on linking to samtools:
+    fmap sfferr
+  They will will be unavailable if the samtools directory cannot be located.
+
   The samtools directory must be placed in this directory.  The 
   easiest way to do this is to a symbolic link:
     ln -s <path to samtools> samtools 
