--- a/README
+++ b/README
@@ -3,12 +3,16 @@ FMAP - flow mapper
 === Pre-requisites ===
 1. SAMtools:
   The following commands rely on linking to samtools:
-    fmap sfferr
+    fmap sam2fs
   They will will be unavailable if the samtools directory cannot be located.
 
   The samtools directory must be placed in this directory.  The 
   easiest way to do this is to a symbolic link:
     ln -s <path to samtools> samtools 
+  Then the samtools library must be built:
+    cd samtools
+	make
+	cd ..
 
 === To Install ===
 
