--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,8 @@
-FMAP -- History of visible changes.
+TMAP -- History of visible changes.
 
 See LICENSE for details
 See COPYING for copying conditions.
 
-Please send fmap bug reports to nils.homer@lifetech.com
+Please send tmap bug reports to nils.homer@lifetech.com
 
 -------------------------------------------------------
