--- a/README
+++ b/README
@@ -1,9 +1,9 @@
-FMAP - flow mapper
+TMAP - flow mapper
 
 === Pre-requisites ===
 1. SAMtools:
   The following commands rely on linking to samtools:
-    fmap sam2fs
+    tmap sam2fs
   They will will be unavailable if the samtools directory cannot be located.
 
   The samtools directory must be placed in this directory.  The 
