--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -98,7 +98,7 @@ Enjoy!
 \section{Program Organization}
 TMAP consists of a set of utilities, combined into one command line program called \TT{tmap}.  
 Each utility is specified by a unique name or command.
-Specifying TMAP without a command will give a list of commands, while specifying FMAP with a command but no options will give a list of options for that command.
+Specifying TMAP without a command will give a list of commands, while specifying TMAP with a command but no options will give a list of options for that command.
 
 There are two steps in mapping with TMAP.
 The first step is to build an index of the reference genome onto which we map.
