--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -422,9 +422,8 @@ Specific details can be found below.
 
 \subsubsection{RG}
 The RG field can be populated using the \TT{-R} option.
-By default the \TT{ID} and \TT{PG} tags are included.
-When specifying an RG line, do not include any of the following tags, as they will be populated by tmap:
-ID, and PG.
+By default the TT{ID} and \TT{PG} tags are included.
+When specifying an RG line, do not include the PG tag as it will be populated by tmap:
 If the input is an SFF file and the \TT{-Y} option is used, then a comment line will be placed in the header with the following tags:
 RG, FO, and KS.
 The RG tag in the comment is the associated read group ID.
