* updating reference to BWA-short; was BWA-long

--- a/doc/tmap-book.bib
+++ b/doc/tmap-book.bib
@@ -12,12 +12,12 @@
 % 20080505 
 @Article{BWA-short,
 	Author="Li, H.  and Durbin, R. ",
-	Title="{{F}ast and accurate long-read alignment with {B}urrows-{W}heeler transform}",
+	Title="{{F}ast and accurate short read alignment with {B}urrows-{W}heeler transform}",
 	Journal="Bioinformatics",
-	Year="2010",
-	Volume="26",
-	Pages="589--595",
-	Month="Mar"
+	Year="2009",
+	Volume="25",
+	Pages="1754--1760",
+	Month="Jul"
 }
 
 % 20080505 
