* updating manual to state that SAM tags are relative to the secondary seed if used.

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -449,13 +449,13 @@ This stores the alignment score.
 This stores the edit distance from the reference sequence.
 
 \subsubsection{XM}
-This stores the number of mismatches in the mapping.
+This stores the number of mismatches in the mapping, or in the secondary seed if used.
 
 \subsubsection{XO}
-This stores the number of indels (gap opens) in the mapping.
+This stores the number of indels (gap opens) in the mapping, or in the secondary seed if used.
 
 \subsubsection{XG}
-This stores the number of indel extensions (gap extensions) in the mapping.
+This stores the number of indel extensions (gap extensions) in the mapping, or in the secondary seed if used.
 
 \subsubsection{XS}
 This stores the alignment score of next-best sub-optimal mapping.
