* typo in the manual

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -429,7 +429,7 @@ Specific details can be found below.
 
 \subsubsection{RG}
 The RG field can be populated using the \TT{-R} option.
-By default the TT{ID} and \TT{PG} tags are included.
+By default the \TT{ID} and \TT{PG} tags are included.
 When specifying an RG line, do not include the PG tag as it will be populated by tmap:
 If the input is an SFF file and the \TT{-Y} option is used, then a comment line will be placed in the header with the following tags:
 RG, FO, and KS.
