* changing default url in the manual

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -86,7 +86,7 @@ Without proper understanding of the underlying algorithms, it is difficult to us
 
 If you have anything that you would be useful to add to this guide, feel free to relay the addition to the TMAP developers.
 This includes but is not limited to bugs, typos, and explanations.
-Please see \url{http://www.iontorrent.com} for more details.
+Please see \url{http://ioncommunity.iontorrent.com} for more details.
 
 Enjoy!
 
