* adding support for SAM/BAM input

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -131,7 +131,7 @@ The input reads can be in FASTA, FASTQ, or SFF format.
 \subsubsection{\TT{-F STRING}}
 Specifies the file format of the reads file.
 Without this option, the format is auto-recognized by the file extension.
-The valid inputs are \TT{fa} or \TT{fasta} for FASTA, \TT {fq} or \TT{fastq} for FASTQ, or \TT{sff} for SFF.
+The valid inputs are \TT{fa} or \TT{fasta} for FASTA, \TT {fq} or \TT{fastq} for FASTQ, \TT{sff} for SFF, \TT{sam} for SAM, or \TT{bam} for BAM.
 
 \subsubsection{\TT{-A INT}}
 Specifies the match score.
